# motion_capture_system

./: README.md
mocap_base/: CMakeLists.txt  package.xml
mocap_base/include/mocap_base/: MoCapDriverBase.h  helpers.h
mocap_base/src/: KalmanFilter.cpp  MoCapDriverBase.cpp
mocap_qualisys/: CMakeLists.txt  package.xml
mocap_qualisys/include/mocap_qualisys/: QualisysDriver.h  RTPacket.cpp  RTProtocol.cpp
mocap_qualisys/launch/: qualisys.launch.py
mocap_qualisys/src/: QualisysDriver.cpp  qualisys.cpp
