<?xml version="1.0"?>
<package format="2">
  <name>mocap_base</name>
  <version>0.0.1</version>
  <description>Base class for different motion capture systems</description>

  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <license>Apache-2.0</license>
  <author>Ke Sun, Joris Verhagen</author>

  <buildtool_depend>ament</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen_conversions</depend>

  <export>
  </export>
</package>
