<?xml version="1.0"?>
<package format="2">
  <name>mocap_base</name>
  <version>0.0.1</version>
  <description>Base class for different motion capture systems</description>

  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <license>Apache-2.0</license>
  <author>Ke Sun, Joris Verhagen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
